# benchmarks

./: .gitignore  CMakeLists.txt  Makefile  README.md  cgemm.cu  zgemm.cu
results/: notes.txt
src/: cgemm.cu  gene_bruit_rayleigh_scalaire.c  generateRayleighScalarNoise.c  notes.txt  zgemm.cu
src/nbody/: display.cpp  display.hpp  glcamera.cpp  glcamera.hpp  main.cpp  nbody.cpp  nbody.hpp  sldgltest
